--- a/src/RockFile.Console/RockFile.Console.csproj
+++ b/src/RockFile.Console/RockFile.Console.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\RockFile\RockFile.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="fmbm.dirpaths" Version="1.0.0-beta.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
