--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ## Not in template
 
+/src/RockFile.Console/AppRoot/
 /tests/**/AppRoot/
 
 ## Ignore Visual Studio temporary files, build results, and
