--- a/src/CCFile/CCFile.csproj
+++ b/src/CCFile/CCFile.csproj
@@ -18,4 +18,8 @@
     <WarningsAsErrors>Nullable</WarningsAsErrors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="../../ReadMe.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
+
 </Project>
