--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,22 @@
             "problemMatcher": "$msCompile"
         },
         {
+            "label": "pack",
+            "command": "dotnet",
+            "type": "process",
+            "options": {
+                "cwd": "${workspaceFolder}/src/CCFile"
+            },
+            "args": [
+                "pack",
+                "-c",
+                "Release",
+                "-o",
+                "../../../nuget"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
             "label": "publish",
             "command": "dotnet",
             "type": "process",
